Unit test fix