@@ -1,17 +1,21 @@
 package velka.lang.test;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.TreeMap;
 
-import org.antlr.v4.runtime.ANTLRInputStream;
 import org.antlr.v4.runtime.CharStream;
+import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
 import org.antlr.v4.runtime.TokenStream;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import velka.lang.abstraction.ExtendedLambda;
@@ -25,7 +29,9 @@ import velka.lang.application.Deconstruct;
 import velka.lang.application.DefineConstructor;
 import velka.lang.application.AbstractionApplication;
 import velka.lang.application.DefineConversion;
+import velka.lang.application.DefineRepresentation;
 import velka.lang.application.DefineSymbol;
+import velka.lang.application.DefineType;
 import velka.lang.application.ExceptionExpr;
 import velka.lang.application.IfExpression;
 import velka.lang.application.OrExpression;
@@ -62,34 +68,22 @@ import velka.lang.types.TypeRepresentation;
 import velka.lang.types.TypeTuple;
 import velka.lang.types.TypeVariable;
 import velka.lang.util.AppendableException;
-import velka.lang.util.Pair;
 
-@SuppressWarnings("deprecation")
 class TestParser {
 
-	private Expression parsed;
-	private Expression expected;
-
-	private static boolean initFlag = false;
-
-	@BeforeAll
-	static void setUp() throws Exception {
-// 		TypeEnvironment.initBasicTypes();
-		Environment.initTopLevelEnvitonment();
-	}
-
 	@Test
+	@DisplayName("Test Semantic Simple")
 	void testSemanticSimple() throws AppendableException {
 		this.testParse("()", Expression.EMPTY_EXPRESSION);
 		this.testParse("(+ 1 1)", new AbstractionApplication(new Symbol("+"),
 				new Tuple(Arrays.asList(new LitInteger(1), new LitInteger(1)))));
 		this.testParse("(if #t x y)", new IfExpression(LitBoolean.TRUE, new Symbol("x"), new Symbol("y")));
 		// this.testParse("(type Name)", new DefineType(new TypeName("Name")));
-		this.testParse("(type Name)", Expression.EMPTY_EXPRESSION);
+		this.testParse("(type Name)", new DefineType(new TypeName("Name")));
 		// this.testParse("(representation Unstructured Name)",
 		// new DefineRepresentation(new TypeName("Name"), new
 		// TypeRepresentation("Unstructured")));
-		this.testParse("(representation Unstructured Name)", Expression.EMPTY_EXPRESSION);
+		this.testParse("(representation Unstructured Name)", new DefineRepresentation(new TypeName("Name"), new TypeRepresentation("Unstructured")));
 		this.testParse("(constructor Name Unstructured ((String:Native x)) x)",
 				new DefineConstructor(new TypeAtom(new TypeName("Name"), new TypeRepresentation("Unstructured")),
 						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
@@ -97,7 +91,7 @@ class TestParser {
 		// this.testParse("(representation Structured Name)",
 		// new DefineRepresentation(new TypeName("Name"), new
 		// TypeRepresentation("Structured")));
-		this.testParse("(representation Structured Name)", Expression.EMPTY_EXPRESSION);
+		this.testParse("(representation Structured Name)", new DefineRepresentation(new TypeName("Name"), new TypeRepresentation("Structured")));
 		this.testParse("(constructor Name Structured ((String:Native x) (String:Native y)) (cons x y))",
 				new DefineConstructor(new TypeAtom(new TypeName("Name"), new TypeRepresentation("Structured")),
 						new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
@@ -106,15 +100,11 @@ class TestParser {
 		this.testParse(
 				"(conversion Name:Structured Name:Unstructured ((Name:Structured name)) "
 						+ "(construct Name Unstructured \"Test\"))",
-				DefineConversion.makeDefineConversion(
-						new TypeAtom(new TypeName("Name"), new TypeRepresentation("Structured")),
+				new DefineConversion(new TypeAtom(new TypeName("Name"), new TypeRepresentation("Structured")),
 						new TypeAtom(new TypeName("Name"), new TypeRepresentation("Unstructured")),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("name"))),
-								new TypeTuple(Arrays.asList(
-										new TypeAtom(new TypeName("Name"), new TypeRepresentation("Structured")))),
-								new Construct(
-										new TypeAtom(new TypeName("Name"), new TypeRepresentation("Unstructured")),
-										new Tuple(Arrays.asList(new LitString("Test")))))));
+						new Tuple(Arrays.asList(new Symbol("name"))),
+						new Construct(new TypeAtom(new TypeName("Name"), new TypeRepresentation("Unstructured")),
+								new Tuple(Arrays.asList(new LitString("Test"))))));
 
 		this.testParse("(define one 1)", new DefineSymbol(new Symbol("one"), new LitInteger(1)));
 		this.testParse("(cons 1 2)", new Tuple(Arrays.asList(new LitInteger(1), new LitInteger(2))));
@@ -148,11 +138,12 @@ class TestParser {
 								new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative, TypeAtom.TypeIntNative))))),
 						new Symbol("f")));
 
-		/*this.testParse("(let-type (A) (lambda ((String:Native x) (A y)) y))",
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative, new TypeVariable("A"))),
-						new Symbol("y")));
-		*/
+		/*
+		 * this.testParse("(let-type (A) (lambda ((String:Native x) (A y)) y))", new
+		 * Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))), new
+		 * TypeTuple(Arrays.asList(TypeAtom.TypeStringNative, new TypeVariable("A"))),
+		 * new Symbol("y")));
+		 */
 
 		this.testParse("(deconstruct x Int:Native)", new Deconstruct(new Symbol("x"), TypeAtom.TypeIntNative));
 		;
@@ -165,453 +156,427 @@ class TestParser {
 	}
 
 	@Test
+	@DisplayName("Test Lambda")
 	void testLambda() throws AppendableException {
-		Pair<String, Expression> p = new Pair<String, Expression>("(lambda (x) y)",
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(new TypeVariable("_x"))), new Symbol("y")));
+		String sExpr = "(lambda (x) y)";
+		Expression expr = new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
+				new TypeTuple(Arrays.asList(new TypeVariable("_x"))), new Symbol("y"));
 
-		parsed = parseString(p.first);
-		if (!(parsed instanceof Lambda)) {
-			fail(parsed + " is not a " + Lambda.class.getName());
-		}
+		Expression parsed = parseString(sExpr);
+		assertTrue(parsed instanceof Lambda);
+
 		Lambda parsedLambda = (Lambda) parsed;
-		expected = p.second;
-		Lambda expectedLambda = (Lambda) p.second;
-		if (!parsedLambda.args.equals(expectedLambda.args) || !parsedLambda.body.equals(expectedLambda.body)
-				|| parsedLambda.argsType.size() != expectedLambda.argsType.size()) {
-			fail(parsed + " is not equal to " + expected);
-		}
+		Lambda expectedLambda = (Lambda) expr;
 
-		p = new Pair<String, Expression>("(lambda ((String x) (Int y)) x)",
+		assertEquals(parsedLambda, expectedLambda);
+
+		assertEquals(parseString("(lambda ((String x) (Int y)) x)"),
 				new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
 						new TypeTuple(Arrays.asList(TypeAtom.TypeString, TypeAtom.TypeInt)), new Symbol("x")));
-		parsedLambda = (Lambda) parseString(p.first);
-		expectedLambda = (Lambda) p.second;
-		if (!parsedLambda.args.equals(expectedLambda.args) || !parsedLambda.body.equals(expectedLambda.body)
-				|| parsedLambda.argsType.size() != expectedLambda.argsType.size()) {
-			fail(parsed + " is not equal to " + expected);
-		}
 	}
 
 	@Test
+	@DisplayName("Test Extended Lambda")
 	void testElambda() throws AppendableException {
-		parsed = parseString("(extended-lambda ((Int x)) ((Int:String) y))");
-		if (!(parsed instanceof ExtendedLambda)) {
-			fail(parsed + " is not a " + ExtendedLambda.class.getName());
-		}
+		Expression parsed = parseString("(extended-lambda ((Int x)) ((Int:String) y))");
+		assertTrue(parsed instanceof ExtendedLambda);
 	}
 
 	@Test
+	@DisplayName("Test Validate Extended Lambda")
 	public void testValidateElambda() {
 		// Too few arguments
-		Assertions.assertThrows(AppendableException.class, () -> parseString("(extended-lambda (x))"));
+		assertThrows(AppendableException.class, () -> parseString("(extended-lambda (x))"));
 
 		// Second argument is not a list
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(extended-lambda x x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(extended-lambda x x)"));
 
 		// Badly formed implementation
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(extended-lambda (x) x x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(extended-lambda (x) x x)"));
 	}
 
 	@Test
+	@DisplayName("Vailade If Expression")
 	public void testValidateIf() {
 		// Too few arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(if)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(if)"));
 
 		// Too many arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(if x y z w)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(if x y z w)"));
 	}
 
 	@Test
+	@DisplayName("Test Validate Lambda")
 	public void testValidateLambda() {
 		// Too few arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(lambda)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(lambda)"));
 		// Too many arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(lambda x y z)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(lambda x y z)"));
 		// Badly formed argument list
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda x y)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda x y)"));
 
 		// non-symbol token instead of lambda
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateLambdaList(Arrays.asList(SemanticNode.make(NodeType.STRING, "lambda"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 		// Bad symbol in place of lambda
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateLambdaList(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 	}
 
 	@Test
+	@DisplayName("Test Parse Define Type")
 	public void testParseDefType() {
 		// Too few arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(type)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(type)"));
 		// Too many arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(type animal dog)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(type animal dog)"));
 		// Defining non-symbol type
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(type 1234)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(type 1234)"));
 
 		// non-symbol token instead of deftype
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> Validations.validateDefTypeList(
+		assertThrows(UnexpectedExpressionException.class, () -> Validations.validateDefTypeList(
 				Arrays.asList(SemanticNode.make(NodeType.STRING, "type"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 		// Bad symbol in place of deftype
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> Validations.validateDefTypeList(
+		assertThrows(UnexpectedExpressionException.class, () -> Validations.validateDefTypeList(
 				Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 	}
 
 	@Test
+	@DisplayName("Test Parse Define Representation")
 	public void testParseDefRep() {
 		// Too few arguments
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(representation)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(representation)"));
 		// Too many argument
-		Assertions.assertThrows(InvalidNumberOfArgsException.class,
+		assertThrows(InvalidNumberOfArgsException.class,
 				() -> parseString("(representation list functional random failed)"));
 		// Type is not symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class,
-				() -> parseString("(representation 1234 functional)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(representation 1234 functional)"));
 		// Representation is not symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(representation list 1234)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(representation list 1234)"));
 	}
 
 	@Test
+	@DisplayName("Test Parse Type")
 	public void testParseType() {
 		// Wrong token in place of type
-		Assertions.assertThrows(AppendableException.class, () -> parseString("(extended-lambda (x) x ((1234) x))"));
+		assertThrows(AppendableException.class, () -> parseString("(extended-lambda (x) x ((1234) x))"));
 	}
 
 	@Test
+	@DisplayName("Test Parse Variable Type Pair")
 	public void testParseVariableTypePair() {
 		// Badly formed variable-type pair
-		Assertions.assertThrows(UnexpectedExpressionException.class,
-				() -> parseString("(lambda ((Integer String x)) x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda ((Integer String x)) x)"));
 
 		// Non-type on type position
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda ((1234 x)) x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda ((1234 x)) x)"));
 
 		// Not symbol on variable position
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda ((Integer 1234)) x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(lambda ((Integer 1234)) x)"));
 
 		// Pair is not a list
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateVariableTypePair(SemanticNode.make(NodeType.SYMBOL, "x")));
 	}
 
 	@Test
+	@DisplayName("Test Parse Implementation")
 	public void testParseImplementation() {
 		// Too many arugments in implementation
-		Assertions.assertThrows(AppendableException.class,
-				() -> parseString("(extended-lambda (x) x ((Integer) x y))"));
+		assertThrows(AppendableException.class, () -> parseString("(extended-lambda (x) x ((Integer) x y))"));
 
 		// Badly formed type list
-		Assertions.assertThrows(UnexpectedExpressionException.class,
-				() -> parseString("(extended-lambda (x) x (1234 x))"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(extended-lambda (x) x (1234 x))"));
 
-		Assertions.assertThrows(AppendableException.class,
+		assertThrows(AppendableException.class,
 				() -> Validations.validateImplementation(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "x"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x")),
 						new TreeMap<TypeVariable, TypeVariable>()));
-		Assertions.assertThrows(AppendableException.class,
+		assertThrows(AppendableException.class,
 				() -> Validations.validateImplementation(
 						Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x")),
 						new TreeMap<TypeVariable, TypeVariable>()));
 	}
 
 	@Test
+	@DisplayName("Test Parse Define Conversion")
 	public void testParseDefConversion() {
 		// Too few args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(conversion x)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(conversion x)"));
 		// Too many args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(conversion x y z w q)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(conversion x y z w q)"));
 
 		// Bad special form
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateDefconversionList(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations
-						.validateDefconversionList(Arrays.asList(SemanticNode.make(NodeType.INT, new Integer(1234)),
+						.validateDefconversionList(Arrays.asList(SemanticNode.make(NodeType.INT, Integer.valueOf(1234)),
 								SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"),
 								SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 
 		// Bad From Type
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(conversion 1234 Int (x) x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(conversion 1234 Int (x) x)"));
 		// Bad To Type
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(conversion Int 1234 (x) x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(conversion Int 1234 (x) x)"));
 		// Conversion is not lambda
-		Assertions.assertThrows(UnexpectedExpressionException.class,
-				() -> parseString("(conversion Int Double 1234 x)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(conversion Int Double 1234 x)"));
 
 		// Conversion takes multiple arguments
-		Assertions.assertThrows(AppendableException.class, () -> parseString("(conversion Int Double (x y) x)"));
+		assertThrows(AppendableException.class, () -> parseString("(conversion Int Double (x y) x)"));
 	}
 
 	@Test
+	@DisplayName("Test Parse Define")
 	public void testParseDefine() {
 		// Too few args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(define x)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(define x)"));
 		// Too many args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(define x y z)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(define x y z)"));
 
 		// define token is not a symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateDefineList(Arrays.asList(SemanticNode.make(NodeType.STRING, "define"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 
 		// Bad symbol in define
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateDefineList(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 
 		// Defined is not a symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(define 1234 1234)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(define 1234 1234)"));
 	}
 
 	@Test
+	@DisplayName("Test Parse Cons")
 	public void testParseCons() {
 		// Too few args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(cons x)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(cons x)"));
 		// Too many args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(cons x y z)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(cons x y z)"));
 
 		// cons token is not a symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateConsList(Arrays.asList(SemanticNode.make(NodeType.STRING, "cons"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 
 		// Bad symbol in cons
-		Assertions.assertThrows(UnexpectedExpressionException.class,
+		assertThrows(UnexpectedExpressionException.class,
 				() -> Validations.validateConsList(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"),
 						SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "x"))));
 	}
 
 	@Test
+	@DisplayName("Test Parse Error")
 	public void testParseError() {
 		// Too few args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(error)"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(error)"));
 		// Too many args
-		Assertions.assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(error x y )"));
+		assertThrows(InvalidNumberOfArgsException.class, () -> parseString("(error x y )"));
 
 		// error token is not a symbol
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> Validations.validateErrorList(
+		assertThrows(UnexpectedExpressionException.class, () -> Validations.validateErrorList(
 				Arrays.asList(SemanticNode.make(NodeType.STRING, "error"), SemanticNode.make(NodeType.STRING, "xs"))));
 
 		// Bad symbol in error
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> Validations.validateErrorList(
+		assertThrows(UnexpectedExpressionException.class, () -> Validations.validateErrorList(
 				Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "fail"), SemanticNode.make(NodeType.STRING, "x"))));
 
 		// Error msg is not a string
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> parseString("(error 1234)"));
+		assertThrows(UnexpectedExpressionException.class, () -> parseString("(error 1234)"));
 	}
 
 	@Test
+	@DisplayName("Test Parse Node")
 	public void testParseNode() {
-		Assertions.assertThrows(AppendableException.class,
+		assertThrows(AppendableException.class,
 				() -> SemanticParser.parseNode(SemanticNode.make(NodeType.UNUSED, new Object())));
 	}
 
 	@Test
+	@DisplayName("Test Parse Special Form")
 	public void testParseSpecialForm() {
-		Assertions.assertThrows(AppendableException.class, () -> SemanticParser
+		assertThrows(AppendableException.class, () -> SemanticParser
 				.parseNodelist(Arrays.asList(SemanticNode.make(NodeType.SYMBOL, SemanticParserStatic.UNUSED))));
 	}
 
 	@Test
+	@DisplayName("Test Semantic Parses Static")
 	public void testSemanticParserStatic() throws AppendableException {
 		SemanticNode n = SemanticNode.make(NodeType.SYMBOL, "fail");
-		if (SemanticParserStatic.isSpecialForm(n)) {
-			fail(n.toString() + " is not a special form " + n.getClass().getName());
-		}
+		assertFalse(SemanticParserStatic.isSpecialForm(n));
 
 		List<TypeVariablePair> l = Arrays.asList(new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")),
 				new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")),
 				new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")));
-		if (!SemanticParserStatic.isArgListFullyTyped(l)) {
-			fail(l.toString() + " is fully typed!");
-		}
+		assertTrue(SemanticParserStatic.isArgListFullyTyped(l));
 
 		l = Arrays.asList(new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")),
 				new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")));
-		if (SemanticParserStatic.isArgListFullyTyped(l)) {
-			fail(l.toString() + " is not fully typed!");
-		}
+		assertFalse(SemanticParserStatic.isArgListFullyTyped(l));
 
 		l = Arrays.asList(new TypeVariablePair(TypeAtom.TypeInt, new Symbol("x")));
-		if (!SemanticParserStatic.isArgListFullyTyped(l)) {
-			fail(l.toString() + " is fully typed!");
-		}
-		if (SemanticParserStatic.isArgListUntypped(l)) {
-			fail(l.toString() + " is typed!");
-		}
+		assertTrue(SemanticParserStatic.isArgListFullyTyped(l));
+		assertFalse(SemanticParserStatic.isArgListUntypped(l));
 
 		l = Arrays.asList(new TypeVariablePair(new TypeVariable("x"), new Symbol("x")));
-		if (SemanticParserStatic.isArgListFullyTyped(l)) {
-			fail(l.toString() + " is not fully typed!");
-		}
-		if (!SemanticParserStatic.isArgListUntypped(l)) {
-			fail(l.toString() + " is untyped!");
-		}
+		assertFalse(SemanticParserStatic.isArgListFullyTyped(l));
+		assertTrue(SemanticParserStatic.isArgListUntypped(l));
 
 		l = Arrays.asList(new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x")));
-		if (SemanticParserStatic.isArgListUntypped(l)) {
-			fail(l.toString() + " is not untyped!");
-		}
+		assertFalse(SemanticParserStatic.isArgListUntypped(l));
 
 		l = Arrays.asList(new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(new TypeVariable("x"), new Symbol("x")));
-		if (!SemanticParserStatic.isArgListUntypped(l)) {
-			fail(l.toString() + " is untyped!");
-		}
+		assertTrue(SemanticParserStatic.isArgListUntypped(l));
 
 		List<TypeVariablePair> k = Arrays.asList(new TypeVariablePair(new TypeVariable("x"), new Symbol("x")),
 				new TypeVariablePair(new TypeVariable("x"), new Symbol("x")));
-		if (!SemanticParserStatic.listTail(l).equals(k)) {
-			fail(k.toString() + " is a tail of " + l.toString());
-		}
+		assertEquals(SemanticParserStatic.listTail(l), k);
 
 		Tuple t = SemanticParserStatic.parseArgsList(
 				Arrays.asList(SemanticNode.make(NodeType.SYMBOL, "x"), SemanticNode.make(NodeType.SYMBOL, "y")));
 		Tuple exp = new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y")));
-		if (!t.equals(exp)) {
-			fail("SemanticParserStatic.parseArgsList not working as expected. Got " + t + " expected " + exp);
-		}
+		assertEquals(t, exp);
 
-		Assertions.assertThrows(UnexpectedExpressionException.class, () -> SemanticParserStatic
-				.parseArgsList(Arrays.asList(SemanticNode.make(NodeType.BOOL, new Boolean(false)))));
+		assertThrows(UnexpectedExpressionException.class, () -> SemanticParserStatic
+				.parseArgsList(Arrays.asList(SemanticNode.make(NodeType.BOOL, Boolean.valueOf(false)))));
 	}
 
-	@SuppressWarnings("unlikely-arg-type")
 	@Test
+	@DisplayName("Test Variable Type Pair")
 	public void testVariableTypePair() {
 		TypeVariablePair p = new TypeVariablePair(TypeAtom.TypeBool, new Symbol("x"));
-		p.toString();
+		assertAll(() -> {
+			p.toString();
+		});
 
-		Integer i = new Integer(128);
-		if (p.equals(i)) {
-			fail(p.toString() + " is not equal to " + i.toString());
-		}
+		Integer i = Integer.valueOf(128);
+		assertNotEquals(p, i);
 
 		TypeVariablePair q = new TypeVariablePair(TypeAtom.TypeBool, new Symbol("y"));
-		if (p.equals(q)) {
-			fail(p.toString() + " not equals to " + q.toString());
-		}
+		assertNotEquals(p, q);
 
 		q = new TypeVariablePair(TypeAtom.TypeInt, new Symbol("x"));
-		if (p.equals(q)) {
-			fail(p.toString() + " not equals to " + q.toString());
-		}
+		assertNotEquals(p, q);
 	}
 
 	@Test
+	@DisplayName("Test Type Environment")
 	public void testTypeEnvironment() throws AppendableException {
-		TypeEnvironment typeEnv = TypeEnvironment.singleton;
+		Environment env = Environment.initTopLevelEnvitonment();
+		TypeEnvironment typeEnv = TypeEnvironment.initBasicTypes(env);
 
-		typeEnv.addType(new TypeName("ListTestTypeEnv"));
-		typeEnv.addRepresentation(new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("Functional")));
-		typeEnv.addType(new TypeName("Test"));
-		typeEnv.addRepresentation(new TypeAtom(new TypeName("Test"), new TypeRepresentation("Functional")));
-
-		if (!typeEnv.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), TypeRepresentation.WILDCARD))) {
-			fail("Expected typeEnv.existsTypeAtom(new TypeAtom(new TypeName(\"ListTestTypeEnv\"), TypeRepresentation.WILDCARD)) == true");
-		}
-		if (!typeEnv
-				.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("Functional")))) {
-			fail("Expected typeEnv.existsTypeAtom(new TypeAtom(new TypeName(\"ListTestTypeEnv\"), new TypeRepresentation(\"Functional\"))) == true");
-		}
-		if (typeEnv.existsTypeAtom(new TypeAtom(new TypeName("kawabanga"), TypeRepresentation.WILDCARD))) {
-			fail("Expected typeEnv.existsTypeAtom(new TypeAtom(new TypeName(\"kawabanga\"), TypeRepresentation.WILDCARD)) == false");
-		}
-		if (typeEnv
-				.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("kawabanga")))) {
-			fail("Exprected typeEnv.existsTypeAtom(new TypeAtom(new TypeName(\"ListTestTypeEnv\"), new TypeRepresentation(\"kawabanga\"))) == false");
-		}
-
-		typeEnv.getConstructor(TypeAtom.TypeIntRoman, new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative)));
-		Assertions.assertThrows(AppendableException.class,
+		assertAll(() -> {
+			typeEnv.addType(new TypeName("ListTestTypeEnv"));
+			typeEnv.addRepresentation(
+					new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("Functional")));
+			typeEnv.addType(new TypeName("Test"));
+			typeEnv.addRepresentation(new TypeAtom(new TypeName("Test"), new TypeRepresentation("Functional")));
+		});
+		
+		assertTrue(typeEnv.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), TypeRepresentation.WILDCARD)));
+		assertTrue(typeEnv
+				.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("Functional"))));
+		assertFalse(typeEnv.existsTypeAtom(new TypeAtom(new TypeName("kawabanga"), TypeRepresentation.WILDCARD)));
+		assertFalse(typeEnv
+				.existsTypeAtom(new TypeAtom(new TypeName("ListTestTypeEnv"), new TypeRepresentation("kawabanga"))));
+		
+		assertAll(() -> typeEnv.getConstructor(TypeAtom.TypeIntRoman, new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative))));
+		assertThrows(AppendableException.class,
 				() -> typeEnv.getConstructor(new TypeAtom(new TypeName("fail"), TypeRepresentation.WILDCARD),
 						TypeTuple.EMPTY_TUPLE));
 
-		Assertions.assertThrows(AppendableException.class,
+		assertThrows(AppendableException.class,
 				() -> typeEnv.addRepresentation(new TypeAtom(new TypeName("Int"), new TypeRepresentation("Roman"))));
 
-		Assertions.assertThrows(AppendableException.class, () -> typeEnv.addConversion(TypeAtom.TypeIntNative,
+		assertThrows(AppendableException.class, () -> typeEnv.addConversion(TypeAtom.TypeIntNative,
 				TypeAtom.TypeStringNative,
-				new Function(TypeTuple.EMPTY_TUPLE, Tuple.EMPTY_TUPLE, expected, Environment.topLevelEnvironment)));
+				new Function(TypeTuple.EMPTY_TUPLE, Tuple.EMPTY_TUPLE, Expression.EMPTY_EXPRESSION, env)));
 
-		Assertions.assertThrows(DuplicateConversionException.class,
-				() -> TypeEnvironment.singleton.addConversion(TypeAtom.TypeIntRoman, TypeAtom.TypeIntString,
+		assertThrows(DuplicateConversionException.class,
+				() -> typeEnv.addConversion(TypeAtom.TypeIntRoman, TypeAtom.TypeIntString,
 						new Function(TypeTuple.EMPTY_TUPLE, Tuple.EMPTY_TUPLE, Expression.EMPTY_EXPRESSION,
-								Environment.topLevelEnvironment)));
+								env)));
 
 		typeEnv.convertTo(new LitComposite(new Tuple(Arrays.asList(new LitString("5"))), TypeAtom.TypeIntString),
 				TypeAtom.TypeIntString, TypeAtom.TypeIntRoman);
-		Assertions.assertThrows(ConversionException.class, () -> TypeEnvironment.singleton
+		assertThrows(ConversionException.class, () -> typeEnv
 				.convertTo(Expression.EMPTY_EXPRESSION, TypeAtom.TypeStringNative, TypeAtom.TypeIntNative));
 	}
 
 	@Test
+	@DisplayName("Test Semantic Node")
 	public void testSemanticNode() {
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, "fail"));
-		Assertions.assertThrows(AppendableException.class,
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, "fail"));
+		assertThrows(AppendableException.class,
 				() -> SemanticNode.make(NodeType.INT, new SemanticPair("fail", "fail")));
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.SYMBOL, new Integer(128)));
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, new Double(3.14)));
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, "fail"));
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, new Boolean(true)));
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, Arrays.asList(128)));
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.SYMBOL, Integer.valueOf(128)));
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, Double.valueOf(3.14)));
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, "fail"));
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, Boolean.valueOf(true)));
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.INT, Arrays.asList(128)));
 
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asSymbol());
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asPair());
-		Assertions.assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.SYMBOL, "fail").asInt());
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asDouble());
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asString());
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asBool());
-		Assertions.assertThrows(AppendableException.class,
-				() -> SemanticNode.make(NodeType.INT, new Integer(128)).asList());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asSymbol());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asPair());
+		assertThrows(AppendableException.class, () -> SemanticNode.make(NodeType.SYMBOL, "fail").asInt());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asDouble());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asString());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asBool());
+		assertThrows(AppendableException.class,
+				() -> SemanticNode.make(NodeType.INT, Integer.valueOf(128)).asList());
 
 	}
 
 	@Test
+	@DisplayName("Test Exceptions")
 	void testExceptions() {
+		Environment env = Environment.initTopLevelEnvitonment();
+		assertAll(() -> {
 		new UserException("test");
 		new DuplicateConversionException(TypeAtom.TypeBool, TypeAtom.TypeBoolNative,
 				new Function(TypeTuple.EMPTY_TUPLE, Tuple.EMPTY_TUPLE, Expression.EMPTY_EXPRESSION,
-						Environment.topLevelEnvironment),
+						env),
 				new Function(TypeTuple.EMPTY_TUPLE, Tuple.EMPTY_TUPLE, Expression.EMPTY_EXPRESSION,
-						Environment.topLevelEnvironment));
+						env));
 		new UndefinedTypeException("fail");
+		});
 	}
 
 	@Test
+	@DisplayName("Test Let Type")
 	void testLetType() throws AppendableException {
 		Expression e = this.parseString("(let-type (A) (lambda ((A x)) (let-type (A) (lambda ((A y)) x))))");
 
 		TypeVariable outer = (TypeVariable) ((Lambda) e).argsType.get(0);
 		TypeVariable inner = (TypeVariable) ((Lambda) ((Lambda) e).body).argsType.get(0);
 
-		if (outer.equals(inner)) {
-			fail("Parse error expected " + outer.toString() + " and " + inner.toString() + " should not equal");
-		}
+		assertNotEquals(outer, inner);
+		
 		Lambda l1 = (Lambda) e;
 		Lambda l2 = (Lambda) l1.body;
 		// Have to compare names directly as TypeVariables equals if they are not bound
 		// by substitution
-		if (((TypeVariable) l1.argsType.get(0)).name.equals(((TypeVariable) l2.argsType.get(0)).name)) {
-			fail("Let-type not overcovering type variables correcly");
-		}
+		assertNotEquals(((TypeVariable) l1.argsType.get(0)).name, ((TypeVariable) l2.argsType.get(0)).name);
 	}
 
 	private Expression parseString(String s) throws AppendableException {
-		CharStream charStream = new ANTLRInputStream(s);
+		CharStream charStream = CharStreams.fromString(s);
 		TokenStream tokens = new CommonTokenStream(new SchemeLexer(charStream));
 		SchemeParser parser = new SchemeParser(tokens);
 
@@ -621,9 +586,7 @@ class TestParser {
 
 	private void testParse(String parsedString, Expression expected) throws AppendableException {
 		Expression parsed = this.parseString(parsedString);
-		if (!parsed.equals(expected)) {
-			fail("Parse error expected " + expected.toString() + " got " + parsed.toString());
-		}
+		assertEquals(parsed, expected);
 	}
 
 }
